--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css"
     />
+    <link
+      rel="shortcut icon"
+      href="assets/images/parsa3.jpg"
+      type="image/x-icon"
+    />
   </head>
   <body>
     <!-------------------- Start nav ------------------->
